--- a/styles.css
+++ b/styles.css
@@ -505,7 +505,9 @@ nav > *:nth-child(1) {
   grid-template-columns: minmax(100px, 1fr);
   grid-template-rows: 50px repeat(auto-fill, minmax(100px, 1fr));
   grid-gap: 8px;
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: auto;
+  /* overflow: scroll; */
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -678,7 +680,9 @@ a:hover {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: auto;
+  /* overflow: scroll; */
 }
 
 #app-container > *:nth-child(1) {
@@ -881,7 +885,9 @@ a:hover {
       align-content: start;
   grid-auto-flow: row;
   max-height: 480px;
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: auto;
+  /* overflow: scroll; */
   background-color: var(--dark-fg);
   border-radius: 6px;
   -webkit-box-shadow: 0px 20px 30px -20px rgba(0,0,0,0.4);
@@ -1024,7 +1030,9 @@ a:hover {
   grid-template-columns: 1fr;
   grid-auto-rows: auto;
   max-height: 112px;
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: auto;
+  /* overflow: scroll; */
 	padding-left: 8px;
   padding-right: 6px;
   border-radius: 6px;
@@ -1040,7 +1048,9 @@ a:hover {
 
 #user-input .mq-root-block {
   max-height: 112px;
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: auto;
+  /* overflow: scroll; */
 }
 
 .card-box {
@@ -1080,7 +1090,9 @@ a:hover {
 
 .math-container .mq-root-block {
   max-height: 80px;
-  overflow: scroll;
+  overflow-x: auto;
+  overflow-y: auto;
+  /* overflow: scroll; */
 }
 
 .delete-x {
