--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@ body {
   font-family: proxima-nova, sans-serif;
   font-weight: 300;
   background-color: var(--dark-bk);
+  overscroll-behavior: 
 }
 
 
@@ -891,7 +892,7 @@ overflow: scroll; */
   max-height: 480px;
   overflow-x: auto;
   overflow-y: auto;
-  overscroll-behavior: none;
+  overscroll-behavior-y: contain;
   background-color: var(--dark-fg);
   border-radius: 6px;
   -webkit-box-shadow: 0px 20px 30px -20px rgba(0,0,0,0.4);
