--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,23 @@ body > *:nth-child(10) {
 	-ms-grid-column: 3;
 }
 
+/* SCROLL BAR STYLES
+---------------------------------------------------------*/
+body::-webkit-scrollbar {
+    background-color: var(--dark-fg);
+    width:16px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--dark-fg);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--dark-bk);
+    border-radius: 16px;
+    border:4px solid var(--dark-fg);
+}
+
 
 /* NAVIGATION STYLES
 ---------------------------------------------------------*/
