--- a/styles.css
+++ b/styles.css
@@ -535,10 +535,41 @@ nav > *:nth-child(1) {
   top: 0;
 }
 
+
+
+
+
+
+
+
+#content-area::-webkit-scrollbar {
+    background-color: var(--dark-fg);
+    width:16px;
+}
+
+#content-area::-webkit-scrollbar-track {
+    background-color: var(--dark-fg);
+}
+
+#content-area::-webkit-scrollbar-thumb {
+    background-color: var(--dark-bk);
+    border-radius: 16px;
+    border:4px solid var(--dark-fg);
+}
+
 #content-area > *:nth-child(1) {
 	-ms-grid-row: 1;
 	-ms-grid-column: 1;
 }
+
+
+
+
+
+
+
+
+
 
 .heading-style {
   font-family: proxima-nova, sans-serif;
@@ -913,6 +944,40 @@ a:hover {
           box-shadow: 0px 20px 30px -20px rgba(0,0,0,0.4);
 }
 
+
+
+
+
+
+
+
+#display-field::-webkit-scrollbar {
+    background-color: var(--dark-fg);
+    width:16px;
+}
+
+#display-field::-webkit-scrollbar-track {
+    background-color: var(--dark-fg);
+}
+
+#display-field::-webkit-scrollbar-thumb {
+    background-color: var(--dark-bk);
+    border-radius: 16px;
+    border:4px solid var(--dark-fg);
+}
+
+
+
+
+
+
+
+#content-area > *:nth-child(1) {
+	-ms-grid-row: 1;
+	-ms-grid-column: 1;
+}
+
+
 #editor-drawer {
   -ms-grid-column: 2;
       grid-column-start: 2;
@@ -1051,8 +1116,8 @@ a:hover {
   max-height: 112px;
   overflow-x: auto;
   overflow-y: auto;
-  /* overflow: scroll; */
-	padding-left: 8px;
+  overscroll-behavior: contain;
+  padding-left: 8px;
   padding-right: 6px;
   border-radius: 6px;
   border: transparent;
@@ -1069,7 +1134,7 @@ a:hover {
   max-height: 112px;
   overflow-x: auto;
   overflow-y: auto;
-  /* overflow: scroll; */
+  overscroll-behavior: contain;
 }
 
 .card-box {
@@ -1113,6 +1178,37 @@ a:hover {
   overflow-y: auto;
   /* overflow: scroll; */
 }
+
+
+
+
+
+
+
+
+
+.math-container .mq-root-block::-webkit-scrollbar {
+    background-color: var(--dark-fg);
+    width:16px;
+}
+
+.math-container .mq-root-block::-webkit-scrollbar-track {
+    background-color: var(--dark-fg);
+}
+
+.math-container .mq-root-block::-webkit-scrollbar-thumb {
+    background-color: var(--dark-bk);
+    border-radius: 16px;
+    border:4px solid var(--dark-fg);
+}
+
+
+
+
+
+
+
+
 
 .delete-x {
   -ms-grid-column: 2;
