--- a/styles.css
+++ b/styles.css
@@ -1144,6 +1144,29 @@ a:hover {
   grid-template-columns: 1fr 30px;
 }
 
+
+
+
+
+#user-input .mq-root-block::-webkit-scrollbar {
+    background-color: var(--dark-fg);
+    width:16px;
+}
+
+#user-input .mq-root-block::-webkit-scrollbar-track {
+    background-color: var(--dark-fg);
+}
+
+#user-input .mq-root-block::-webkit-scrollbar-thumb {
+    background-color: var(--dark-bk);
+    border-radius: 16px;
+    border:4px solid var(--dark-fg);
+}
+
+
+
+
+
 .math-container {
   -ms-grid-column: 1;
       grid-column-start: 1;
