--- a/styles.css
+++ b/styles.css
@@ -1148,16 +1148,16 @@ a:hover {
 
 
 
-#user-input .mq-root-block::-webkit-scrollbar {
+#user-input::-webkit-scrollbar {
     background-color: var(--dark-fg);
     width:16px;
 }
 
-#user-input .mq-root-block::-webkit-scrollbar-track {
+#user-input::-webkit-scrollbar-track {
     background-color: var(--dark-fg);
 }
 
-#user-input .mq-root-block::-webkit-scrollbar-thumb {
+#user-input::-webkit-scrollbar-thumb {
     background-color: var(--dark-bk);
     border-radius: 16px;
     border:4px solid var(--dark-fg);
